# infrastructure/src/main/java/br/com/demo/infrastructure/mapper/OrderMapper.java
@@ -1,7 +1,9 @@
 package br.com.demo.infrastructure.mapper;
 
+import br.com.demo.application.core.Pagination;
 import br.com.demo.domain.model.Order;
 import br.com.demo.domain.model.OrderItem;
+import br.com.demo.infrastructure.openapi.order.model.OrderListPage;
 import br.com.demo.infrastructure.persistence.document.OrderDocument;
 import br.com.demo.infrastructure.persistence.document.OrderItemDocument;
 import org.mapstruct.Mapper;
@@ -27,4 +29,6 @@ public abstract class OrderMapper {
 
     @Mapping(source = "unitPrice", target = "unitPrice", qualifiedByName = "moneyToBigDecimal")
     public abstract br.com.demo.infrastructure.openapi.order.model.OrderItemResponse toOrderItemResponse(OrderItem orderItem);
+
+    public abstract OrderListPage toOrderListPage(Pagination<Order> pagination);
 }
